[package]
name = "gazeclient"
version = "0.1.0"
authors = ["Ivo Sequeros <ivosequeros@me.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
fasthash = "0.4.0"
rand = "0.7.3"
criterion = "0.3.2"
avro-rs = "0.10.0"
serde_json = "1.0.53"
serde = "1.0.111"
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
async-trait = "0.1.31"


[[bench]]
name = "id_benchmark"
harness = false

[[bench]]
name = "num_id_benchmark"
harness = false

[[bench]]
name = "byte_transmission"
harness = false

[[bench]]
name = "read_benchmark"
harness = false